[tool.poetry]
name = "scrubadubdub"
version = "v0.2.1"
description = "A Python package to scrub PII"
repository = "https://github.com/kylemclaren/scrub"
authors = ["Kyle McLaren <kylemclaren@protonmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
halo = "^0.0.31"

[tool.poetry.scripts]
scrubadubdub = "scrubadubdub.cli:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
